--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "staging": "vite build --mode staging --watch",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
